[server] Migrate bucket and acl tables from sqlite to db4
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/TODO
+++ b/TODO
@@ -34,3 +34,10 @@ system
 
 - request logging (basic, and to a specified bucket)
 
+
+miscellaneous
+=============
+TDB_PGSZ_xxx should be tuned
+	(research: can page sizes differ, among dbs in the same db
+	environment?)
+
