--- a/README
+++ b/README
@@ -7,7 +7,6 @@ Current dependencies:
 - pcre
 - openssl
 - db4 4.x
-
-Only tested on Linux, though portability patches are welcome.
+- libevent
 
 See doc/ subdirectory for more information.
