Document libcurl dependency in README.
Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/README
+++ b/README
@@ -8,6 +8,7 @@ Current dependencies:
 - openssl
 - db4 4.x
 - libevent
+- libcurl (which may need libssh2)
 
 See doc/ subdirectory for more information.
 
