README: mention wiki homepage
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/README
+++ b/README
@@ -12,6 +12,9 @@ Current dependencies:
 
 See doc/ subdirectory for more information.
 
+Home page:
+	http://hail.wiki.kernel.org/
+
 Source code repository:
 	git://git.kernel.org/pub/scm/daemon/distsrv/tabled.git
 
