--- a/TODO
+++ b/TODO
@@ -1,43 +1,28 @@
 
 buckets
 =======
-- support bucket ACL query or edit (?acl query param)
-
-- make sure to escape lt/gt/amp in XML output (list buckets, list keys)
+- support bucket custom ACL query or edit (?acl query param)
 
 
 objects
 =======
-- support object ACL query or edit (?acl query param)
-
-- store as compressed data (unless there is little advantage to doing so,
-  such as with already-compressed data)
+- support object custom ACL query or edit (?acl query param)
 
   headers
   -------
-  - x-amz-meta-
-  - x-amz-date
+  - x-amz-date, an alternative to the Date header.  Can replace Date
+    in authentication strings, for example.
 
-  - Content-Encoding
+  - Content-Encoding: need transformation, or (as currently) store as-sent?
   - Content-MD5 (note: base64-encoded, not just hex string)
 
+  byte range-related headers...
   - Range
   - Content-Range
 
 
 system
 ======
-- read list of error codes, and attempt to apply as many as possible
-  to the existing codebase (re-analyze every year or two after that)
+- request logging, to a specified bucket)
 
-- SOAP?  Amazon forums say only 1% of userbase uses this, so maybe not
-
-- request logging (basic, and to a specified bucket)
-
-
-miscellaneous
-=============
-TDB_PGSZ_xxx should be tuned
-	(research: can page sizes differ, among dbs in the same db
-	environment?)
 
